5_2/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: default-deny
  namespace: default
spec:
  podSelector: {}
